# Todo

./: Cargo.toml  org.gnome.ToDo.json
data/: meson.build  org.gnome.ToDo.desktop.in  org.gnome.ToDo.gschema.xml  org.gnome.ToDo.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES
src/: application.rs  main.rs  todo.gresource.xml  utils.rs  window.rs  window.ui
src/gtk/: help-overlay.ui
src/task_row/: imp.rs
