[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "*", package = "gtk4", features = ["v4_8"] }
adw = { version = ">= 0.3.1", package = "libadwaita", features = ["v1_4"] }
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
xshell = "0.2"
dirs = "5.0"
walkdir = "2.3"
async-channel = "2.0"
ashpd = { version = "0.6.2", features = ["gtk4"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }